--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,40 @@
 <!DOCTYPE html>
+<!-- HTML5 document declaration -->
+
 <html lang="en">
+  <!-- Page language set to English -->
+
   <head>
     <meta charset="utf-8" />
+    <!-- Character encoding -->
+
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- Favicon for browser tab -->
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Responsive scaling -->
+
     <meta name="theme-color" content="#000000" />
+    <!-- Theme color for mobile browsers -->
+
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- Page description -->
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- iOS home screen icon -->
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- App metadata for PWA support -->
+
     <title>MovieHub</title>
+    <!-- Tab title -->
   </head>
+
   <body>
     <div id="root"></div>
+    <!-- React app mounts here -->
   </body>
 </html>
